# AzureCNArchaeologist

./: .env_example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  ROADMAP.md  azure-storage-files_cms_extractor.py  azure_extractor_implementation_guide.md  azure_general_parser.py  batch_debug.py  batch_processor.py  cli.py  cms_extractor_cli.py  debug.py  enhanced_mysql_extractor.py  mysql-html-extractor.py  mysql-html-parser.py  mysql_cms_extractor.py  pyproject.toml  search_parsed_data_full.json  soft-category.json  test_modular_extractors.py
before-refactor/: cli.py
cms_extractors/: __init__.py  anomaly_detector_extractor.py  api_management_extractor.py  base_cms_extractor.py  config_manager.py  content_extractor.py  cosmos_db_extractor.py  enhanced_cms_extractor.py  entra_external_id_extractor.py  html_processor.py  mysql_cms_extractor.py  pbi_embedded_extractor.py  postgresql_cms_extractor.py  search_extractor.py  ssis_extractor.py  storage_files_cms_extractor.py  verification_manager.py
docs/: TO-DO-list.md  architecture-evolution.md  azure_archaeologist_plan.md  batch-processing-guide.md  current-architecture.md  flexible-content-implementation.md  flexible-phase1.md  flexible-phase2.md  migration_guide.md  modular_cms_extractors_usage.md  os_region_filter_tab.md  phase2-tasks.md  phase3-tasks.md  phase4-tasks.md  pipeline-workflow.md  product-expansion-log.md  refactoring-roadmap.md  unified_cli_usage.md  workflow-guide.md
output/: azure-search-pricing-detail.json  azure-search_parsed_data_full.json  mysql-pricing-detail.json  (+6 more)
(+988 files in other folders)
