[project]
name = "AzureCN-Archeologist"
version = "0.1.0"
description = "ACN rebuild"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-storage-blob>=12.26.0",
    "beautifulsoup4>=4.13.4",
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
    "jsonschema>=4.23.0",
]
